crates/aulos-hooks/tests/snapshots/nfo__episode_imported.snap
---
source: crates/aulos-hooks/tests/nfo.rs
expression: xml
---
<?xml version="1.0" ?>
<episodedetails>
  <title>Mare Fuori S01E02 - Il segreto di Napoli</title>
  <originaltitle>Mare Fuori S01E02 - Il segreto di Napoli</originaltitle>
  <showtitle>Mare Fuori</showtitle>
  <season>1</season>
  <episode>2</episode>
  <subtitle>Il segreto di Napoli</subtitle>
  <plot>Scelte &amp; conseguenze &lt;difficili&gt;</plot>
  <year>2026</year>
  <premiered>2026-01-01</premiered>
  <dateadded>2026-09-04 00:00:00</dateadded>
  <studio>StreamingCommunity</studio>
  <director>StreamingCommunity</director>
  <uniqueid type="streamingcommunity">sc_9_77</uniqueid>
  <website>https://streamingcommunity.test/it/watch/9?e=77</website>
  <tag>dramma</tag>
  <tag>napoli</tag>
  <tag>carcere</tag>
  <runtime>55</runtime>
</episodedetails>
